feat: establish backend framework and core modules
Initiate backend code creation with project structure, configs, base classes, and initial modules.

#VERCEL_SKIP

Co-authored-by: undefined <undefined+undefined@users.noreply.github.com>